# solarsage-astro

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  MANIFEST.md  Makefile  README.md  astro-ctl.sh  bootstrap-v0-demo.sh  bootstrap.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  run-all-tests.sh  tsconfig.json  vitest.config.ts  vitest.setup.ts  worklog.md
apps/api/: .env.example  =0.40.0  Dockerfile  Makefile  astro_dev.db  pyproject.toml  pytest.ini
apps/api/alembic/: env.py
apps/api/app/: __init__.py  main.py
apps/api/tests/: __init__.py  conftest.py  test_access_service.py  test_alembic_roundtrip.py  test_auth_endpoints.py  test_calendar_endpoints.py  test_chat.py  test_chat_quota.py  test_checkin.py  test_critical_gaps.py  test_day_endpoints.py  test_day_no_birthday_fallback.py  test_feature_planning_api.py  test_features_create_business.py  test_geonames_timezone.py  test_health.py  test_horary_answer_quality.py  test_horary_api_error_mapping.py  test_horary_endpoints.py  test_horary_failure_metadata.py  test_horary_schema_strictness.py  test_horary_service.py  test_llm_context_accuracy.py  test_llm_fallback.py  test_llm_service.py  test_log_block_context_manager.py  test_log_envelope_shape.py  test_log_intake.py  test_logging.py  test_natal.py  (+22 more)
apps/solarsage/: .gitignore  Dockerfile  Makefile  README.md  collect_solarsage_western_deep.py  pyproject.toml  sample_params.json
(+821 files in other folders)
