[project]
name = "astro-api"
version = "0.1.0"
description = "Astro Mini App backend (FastAPI orchestrator)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "sqlalchemy>=2.0",
  "asyncpg>=0.30",
  "psycopg[binary]>=3.2",
  "aiosqlite>=0.20",
  "alembic>=1.14",
  "httpx>=0.28",
  "orjson>=3.10",
  "structlog>=24.4",
  "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
  "ruff",
  "pytest",
  "pytest-asyncio",
  "mypy",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict_optional = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
